# pyHelperITA

./: .dockerignore  .gitignore  README.md  SUS_WIB_Analysis.md  deploy.sh  features.config  onBots.ps1  start.py
bot/: __init__.py  access.py  bot.py  cli.py  config.py  db.py  export.py  logging.py  models.py  reminders.py  runtime.py  service.py  test_database.py
bot/telegram/: admin.py  calendar.py  onboarding.py  owner.py  profile.py  team.py
config/: Dockerfile  compose.yaml  directories.json  env.example  features.config  permissions.json  pyproject.toml  requirements.txt  setup.cfg
config/systemd/: corporate-assistant.service
core/: __init__.py  access.py  application.py  cli.py  config.py  db.py  directories.py  events.py  export.py  features.py  instance.py  logging.py  ports.py  reminders.py  runtime.py  service.py
core/integrations/: __init__.py  mail.py  models.py  ports.py  secrets.py  service.py  telegram.py
core/interfaces/: __init__.py
core/telegram/: __init__.py  absence.py  calendar.py  events.py  onboarding.py  owner.py  profile.py  team.py
docs/: README.md  admin.md  employees.md  guest.md  guest_welcome.md  integrations.md  lead.md  onboarding_employee.md  user.md  Баг лог.txt  Идеи на будущее  Идеи на будущее.txt
docs/backlog/: ideas.txt
docs/guides/: guest.md  owner.md  team_lead.md
docs/onboarding/: guest.md
docs/technical/: architecture.md  configuration.md  database.md  functionality.md  vps-deployment.md
tests/: test_architecture.py  test_database.py  test_instance.py  test_integrations.py
(+13 files in other folders)
