[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "corporate-assistant-bot"
version = "0.1.0"
description = "Расширяемый корпоративный Telegram-бот помощник"
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiogram==3.30.0",
    "APScheduler==3.11.3",
    "pydantic-settings==2.14.2",
    "psutil==7.0.0",
    "typer==0.27.0",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "pytest-cov==7.1.0", "ruff==0.15.22"]

[project.scripts]
assistant-bot = "bot.cli:app"

[tool.setuptools]
package-dir = {"" = ".."}

[tool.setuptools.packages.find]
where = [".."]
include = ["bot*"]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["../bot"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"../bot/cli.py" = ["B008"]
